Update PhoneManagerAction.java